fix icon contrast

--- a/wp-content/themes/zenzero-aa/css/12-step-meeting-list.css
+++ b/wp-content/themes/zenzero-aa/css/12-step-meeting-list.css
@@ -162,6 +162,14 @@
     border-radius: 0 2px 2px 0;
 }
 
+#tsml #meetings .controls ul li div.expand {
+    background-image: url(../../../plugins/12-step-meeting-list/assets/img/ionicons-plus-white.svg);
+}
+
+#tsml #meetings .controls ul li div.expand.expanded {
+    background-image: url(../../../plugins/12-step-meeting-list/assets/img/ionicons-minus-white.svg);
+}
+
 #tsml .dropdown .dropdown-menu {
     border-radius: 2px;
 }
